--- a/social_network/chats/static/css/chat/chat.css
+++ b/social_network/chats/static/css/chat/chat.css
@@ -1,15 +1,19 @@
 .chat{
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: space-between;
     height: calc(24vw + 35.5vh);
     width: calc(19.6vw + 27.6vh);
     padding: calc(0.6vw + 0.8vh);
-    gap: calc(0.8vw + 1.2vh);
+    max-height: calc(29vw + 40.9vh);
 }
 .buttons{
     display: flex;
     gap:calc(0.6vw + 0.8vh); ;
+}
+.message-and-input{
+    max-height: calc(20vw + 32.6vh);
+    height: calc(20vw + 32.6vh);
 }
 .button{
     all: unset;
@@ -20,6 +24,7 @@
     width: calc(1.4vw + 2vh);
     height:calc(1.4vw + 2vh);
 }
+
 .input-form{
     display: flex;
     gap: calc(0.8vw + 1.2vh);
@@ -38,9 +43,12 @@
     display: flex;
     flex-direction: column;
     gap: calc(0.3vw + 0.5vh);
-    max-height: calc(23vw + 32.6vh);
+    max-height: calc(17.2vw + 32.6vh);
+    height: calc(17.2vw + 32.6vh);
     overflow-y:auto;
+    justify-content: flex-end;
     align-items: flex-end;
+    
 }
 p{
     padding: calc(0.3vw + 0.5vh);
@@ -49,4 +57,39 @@ p{
     border-radius: calc(0.2vw + 0.3vh);
     max-width: calc(18.5vw + 26vh);
     overflow-wrap: break-word;
+}
+.chat-hat{
+    display: flex;
+    padding-bottom: calc(0.3vw + 0.5vh);
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: calc(0.03vw + 0.05vh) rgba(205, 206, 210, 1) solid;
+}
+.name-and-avatar-group{
+    display: flex;
+    align-items: center;
+    gap: calc(0.6vw + 0.8vh);
+}
+.small-image{
+    width: calc(0.7vw + 1vh);
+    height: calc(0.7vw + 1vh);
+}
+.information-group{
+    display: flex;
+    gap: calc(0.3vw + 0.5vh);
+}
+.avatar{
+    width: calc(1.6vw + 2.3vh);
+    height: calc(1.6vw + 2.3vh);
+}
+.name-group{
+    max-width: calc(12.7vw + 17.9vh);
+}
+.name{
+    font-weight: 500;
+    font-size: calc(0.8vw + 1.2vh);
+}
+.members{
+    font-weight: 400;
+    font-size: calc(0.5vw + 0.8vh);
 }
