--- a/social_network/chats/templates/all_chats/all_chats.html
+++ b/social_network/chats/templates/all_chats/all_chats.html
@@ -25,11 +25,34 @@
                     <input type="text" class = "seacrh-input" placeholder="Пошук">
                 </div>
                 <div class = "people-contacts">
-                    {% for friend in my_friends %}
-                        <div class = "contact">
-                            <img src="{{ friend.profile_image.url }}" class = "people-avatar" alt="">
-                            <span class = "people-name">{{ friend.user.first_name }} {{ friend.user.last_name }}</span>
-                        </div>
+                    {% for friend in friends %}
+                        {% if friend.profile1 == current_user %}
+                            <div class = "contact">
+                                {% for avatar in all_avatars %}
+                                    {% if avatar.image %}
+                                        {% if avatar.profile == current_user %}
+                                            <img class = "post-friend-avatar" src="{{ avatar.image.url }}" alt="">                                              
+                                        {% endif  %}
+                                    {% else %}
+                                        <img class = "post-friend-avatar" src="{% static 'images/icons/account.png'%}" alt="">
+                                    {% endif%}
+                                {% endfor %}
+                                <span class = "people-name">{{ friend.user.first_name }} asdaads{{ friend.user.last_name }}</span>
+                            </div>
+                        {% elif friend.profile2 == current_user %}
+                            <div class = "contact">
+                                {% for avatar in all_avatars %}
+                                    {% if avatar.image %}
+                                        {% if avatar.profile == post.author%}
+                                            <img class = "post-friend-avatar" src="{{ avatar.image.url }}" alt="">                                              
+                                        {% endif  %}
+                                    {% else %}
+                                        <img class = "post-friend-avatar" src="{% static 'images/icons/account.png'%}" alt="">
+                                    {% endif%}
+                                {% endfor %}
+                                <span class = "people-name">{{ friend.user.first_name }} asdasd{{ friend.user.last_name }}</span>
+                            </div>
+                        {% endif%}
                     {% endfor %}
                 </div>
             </div>
@@ -125,20 +148,27 @@
                     </div>  
                 </div>
                 <div class = "body-frame">
-                    <div class = "one-people">
-                        <div class = "people-information">
-                            <div class = icon-people>
-                                <img  class = "icon-people"src="{% static 'images/icons/friend-avatar2.png'%}" alt="">
-                            </div>
-                            <a class = "people-name-and-message" href = "{% url 'chat'%}">
-                                <div class = "people-name-and-time">
-                                    <h3 class = "friend-name">Mona Lisa</h3>
-                                    <h3 class = "time">09:41</h3>
+                {% for group in all_groups %}
+                    {% for member in group.members.all %}
+                        {% if member == current_user %}
+                            <div class = "one-people">
+                                <div class = "people-information">
+                                    <div class = icon-people>
+                                        <img  class = "icon-people"src="{% static 'images/icons/friend-avatar2.png'%}" alt="">
+                                    </div>
+                                            <a class = "people-name-and-message" href = "{% url 'chat' group.pk %}">
+                                                <div class = "people-name-and-time">
+                                                    <h3 class = "friend-name">{{group.name}}</h3>
+                                                    <h3 class = "time">09:41</h3>
+                                                </div>
+                                                <h4 class = message-friend>Привіт! Як справи?</h4>
+                                            </a>
+
                                 </div>
-                                <h4 class = message-friend>Привіт! Як справи?</h4>
-                            </a>
-                        </div>
-                    </div>
+                            </div>
+                        {% endif%}
+                    {% endfor%}
+                {% endfor %}
                 </div>
             </div>
         </div>
