--- a/social_network/friends/templates/friend_profile/friend_profile.html
+++ b/social_network/friends/templates/friend_profile/friend_profile.html
@@ -16,7 +16,13 @@
 
             <div class = "frame profile">
                 <div class = "avatar">
-                    <img class = "my-avatar" src="{{ friend.profile_image.url }}" alt="">
+                    {% for avatar_image in avatar %}
+                        {% if avatar_image.image %}      
+                            <img class = "my-avatar" src="{{ avatar_image.image.url }}" alt="">
+                        {% else %}
+                            <img class = "my-avatar" src="{% static 'images/icons/account.png'%}" alt="">
+                        {% endif %}
+                    {% endfor%}
                 </div>
 
                 <div class = "nick-and-tag">
@@ -71,10 +77,18 @@
                                     <div class = "avatar-label">
                                         <div class = "people-logo-and-nick">
                                             <div class = "logo-post">
-                                                <img class = "post-friend-avatar my-avatar" src="{{ friend.profile_image.url }}" alt="">
+                                                {% for avatar in all_avatars %}
+                                                    {% if avatar.image %}
+                                                        {% if avatar.profile == post.author%}
+                                                            <img class = "post-friend-avatar" src="{{ avatar.image.url }}" alt="">                                              
+                                                        {% endif  %}
+                                                    {% else %}
+                                                        <img class = "post-friend-avatar" src="{% static 'images/icons/account.png'%}" alt="">
+                                                    {% endif%}
+                                                {% endfor %}
                                             </div>
                                             <div class = "nick-post">
-                                                <h2 class = "nick-friend">{{post.user}}</h2>
+                                                <h2 class = "nick-friend">{{post.author}}</h2>
                                             </div>
                                         </div>
                                         <div class = "signature">
@@ -87,42 +101,45 @@
                                     </div>         
                                     </div>
                             
-                                <div class = "body-post">
-                                    <h2 class = "title-post">{{post.title}}</h2>
-                                    <h3 class = "description-post">{{post.text}}</h3>
-                                    {% if post.tags.all %}
+                                    <div class = "body-post">
+                                        <h2 class = "title-post">{{post.title}}</h2>
+                                        <h3 class = "description-post">{{post.content}}</h3>
+                                        {% if post.tags.all %}
                                         <div class = "hashtags">
                                             
                                             {% for tag in post.tags.all %}
-                                                <h1 class = "hashtag">{{tag.tag_name}}</h1>
+                                            <h1 class = "hashtag">{{tag.name}}</h1>
                                             {% endfor %}
                                         </div>
-
-                                    {% endif %}
-                                    <div class = "url-post">
-                                        <a href = "{{ post.url }}" class = "url-post" target="_blank">{{ post.url }} </a>
-                                    </div>
-                                    <div class="photos ">
-                                        {% for img in post.pictures_set.all %}
-                                            <img src="{{ img.image.url }}" class="image photos-{{ post.pictures_set.all|length }} number-{{forloop.counter}}"   >
+                                        {% endif %}
+                                        
+                                        {% for url in all_urls %}
+                                            {% if url.post == post %}
+                                            <div class = "url-post">
+                                                <a href = "{{ url.url }}" target="_blank" class = "url-post">{{ url.url}}</a>
+                                            </div>
+                                            {% endif %}
                                         {% endfor %}
-                                    </div>
-
-                                    <div class = "reviews">
-                                        <div class = "review">
-                                            <div class = "icon-review">
-                                                <img class = "likes-icon" src="{% static 'images/icons/Like.png'%}" alt="">
-                                            </div>
-                                            <h2 class = "likes">{{post.like_count}} Вподобайок</h2>
+                                        <div class="photos ">
+                                            {% for img in post.images.all %}
+                                            <img src="{{ img.file.url }}" class="image photos-{{ post.images.all|length }} number-{{forloop.counter}}"   >
+                                            {% endfor %}
                                         </div>
-                                        <div class = "review">
-                                            <div class = "icon-review">
-                                                <img class = "likes-icon" src="{% static 'images/icons/eye.png'%}" alt="">
+                                        <div class = "reviews">
+                                            <div class = "review">
+                                                <div class = "icon-review">
+                                                    <img class = "likes-icon" src="{% static 'images/icons/Like.png'%}" alt="">
+                                                </div>
+                                                <h2 class = "likes">{{post.like_count}} Вподобайок</h2>
                                             </div>
-                                            <h2 class = "likes">{{post.view_count}} Переглядів</h2>
+                                            <div class = "review">
+                                                <div class = "icon-review">
+                                                    <img class = "likes-icon" src="{% static 'images/icons/eye.png'%}" alt="">
+                                                </div>
+                                                <h2 class = "likes">{{ post.views.count }} Переглядів</h2>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
                             </div>
                         {% empty %}
                             <div class = "empty-posts">
