--- a/social_network/friends/templates/friends/friends.html
+++ b/social_network/friends/templates/friends/friends.html
@@ -30,37 +30,45 @@
                     {% for request in all_requests %}
                         {% if not request.accepted %}
                             <div class = "deleting-confirming hidden" id = "{{request.profile1.user.pk}}">
-                                <h1 class = "confirm-action">Підтвердити дію</h1>
-                                <h3 class = "question-deleting">Ви дійсно хочете видалити користувача?</h3>
-                                <div class = "confirming-buttons">
-                                    <a class = "button-cancel">
-                                        Скасувати
-                                    </a>
-                                    <a class = "button button-confirm-deleting button-delete" id = "{% url 'delete_request' request.profile1.user.pk %}">
-                                        Підтвердити
-                                    </a>
-                                </div>
+                                    <h1 class = "confirm-action">Підтвердити дію</h1>
+                                    <h3 class = "question-deleting">Ви дійсно хочете видалити користувача?</h3>
+                                    <div class = "confirming-buttons">
+                                        <a class = "button-cancel">
+                                            Скасувати
+                                        </a>
+                                        <a class = "button button-confirm-deleting button-delete" id = "{% url 'delete_request' request.profile1.user.pk %}">
+                                            Підтвердити
+                                        </a>
+                                    </div>
                             </div>
                             <div class = "fullscreen hidden"></div>
                             <div class = "card" id = "card-request-{{request.profile1.user.pk}}">
-                                <div class = "profile-card">
-                                    <a href="{% url 'friend_profile' request.profile1.user.pk %}" class = "avatar">
-                                        <img class = "avatar" src="{{request.sent_user.profile.profile_image.url}}" alt="">
-                                    </a>
-                                </div>
-                                <div class = "card-info">
-                                    <h1 class = "name">{{request.profile1.user.first_name}} {{request.profile1.user.last_name}}</h1>
-                                    <h1 class = "tag-name">@{{request.profile1.user.username}}</h1>
-                                </div>
-                    
-                                <div class = "card-buttons">
-                                    <a class = "button button-confirm" href="{% url 'friend_profile' request.profile1.user.pk %}">
-                                        Підтвердити
-                                    </a>
-                                    <a class = "button button-delete" id = "{% url 'delete_request' request.profile1.user.pk %}">
-                                        Видалити
-                                    </a>
-                                </div>
+                                    <div class = "profile-card">
+                                        <a href="{% url 'friend_profile' request.profile1.user.pk %}" class = "avatar">
+                                            {% for avatar in all_avatars %}
+                                                {% if avatar.image %}
+                                                    {% if avatar.profile == request.profile1 %}
+                                                        <img class = "post-friend-avatar avatar" src="{{ avatar.image.url }}" alt="">                                              
+                                                    {% endif  %}
+                                                {% else %}
+                                                    <img class = "post-friend-avatar" src="{% static 'images/icons/account.png'%}" alt="">
+                                                {% endif%}
+                                            {% endfor %}
+                                        </a>
+                                    </div>
+                                    <div class = "card-info">
+                                        <h1 class = "name">{{request.profile1.user.first_name}} {{request.profile1.user.last_name}}</h1>
+                                        <h1 class = "tag-name">@{{request.profile1.user.username}}</h1>
+                                    </div>
+                        
+                                    <div class = "card-buttons">
+                                        <a class = "button button-confirm" href="{% url 'friend_profile' request.profile1.user.pk %}">
+                                            Підтвердити
+                                        </a>
+                                        <a class = "button button-delete" id = "{% url 'delete_request' request.profile1.user.pk %}">
+                                            Видалити
+                                        </a>
+                                    </div>
                             </div>
                         {% endif%}
                     {% endfor %}
@@ -75,7 +83,15 @@
                     {% for recommended in all_recommended %}
                         <div class = "card" id = "card-recommended-{{recommended.user.pk}}">
                             <div class = "profile-card">
-                                <img class = "avatar" src="{{ recommended.profile_image.url }}" alt="">
+                                {% for avatar in all_avatars %}
+                                    {% if avatar.active %}
+                                        {% if avatar.profile == recommended %}
+                                            <img class = "post-friend-avatar avatar" src="{{ avatar.image.url }}" alt="">                                              
+                                        {% endif  %}
+                                    {% else %}
+                                        <img class = "avatar" src="{% static 'images/icons/account.png'%}" alt="">
+                                    {% endif%}
+                                {% endfor %}
                             </div>
                             <div class = "card-info">
                                 <h1 class = "name">{{recommended.user.first_name}} {{ recommended.user.last_name }}</h1>
@@ -101,28 +117,42 @@
                 </div>
                 <div class = "all-cards request">
                     {% for friend in all_friends %}
-                    <div class = "card" id = "card-friend-{{friend.user.pk}}">
-                        
-                        <div class = "profile-card">
-                            <img class = "avatar" src="{{ friend.profile_image.url }}" alt="">
-                            <h1>{{friend.user.profile_image.url}}</h1>
-                        </div>
-                        
-                            <div class = "card-info">
-                                <h1 class = "name">{{ friend.user.first_name }} {{ friend.user.last_name }}</h1>
-                                <h1 class = "tag-name">@{{ friend.user.username }}</h1>
+                        {% if friend.profile1 == current_user or friend.profile2 == current_user %}
+                            <div class = "card" id = "card-friend-{{friend.user.pk}}">
+                                
+                                <div class = "profile-card">
+                                    {% for avatar in all_avatars %}
+                                        {% if avatar.active %}
+                                            {% if avatar.profile == friend.profile1 or avatar.profile == friend.profile2 and avatar.profile != current_user %}
+                                                <img class = "post-friend-avatar avatar" src="{{ avatar.image.url }}" alt="">                                            
+                                            {% endif  %}
+                                        {% else %}
+                                            <img class = "avatar" src="{% static 'images/icons/account.png'%}" alt="">
+                                        {% endif%}
+                                    {% endfor %}
+                                </div>
+                                
+                                    <div class = "card-info">
+                                        {% if friend.profile1 == current_user %}
+                                            <h1 class = "name">{{ friend.profile2.user.first_name }} {{ friend.profile2.user.last_name }}</h1>
+                                            <h1 class = "tag-name">@{{ friend.profile1.user.username }}</h1>
+                                        {% elif friend.profile2 == current_user %}
+                                            <h1 class = "name">{{ friend.profile1.user.first_name }} {{ friend.profile1.user.last_name }}</h1>
+                                            <h1 class = "tag-name">@{{ friend.profile1.user.username }}</h1>                   
+                                        {% endif %}    
+                                    </div>
+                                
+                            
+                                <div class = "card-buttons">
+                                    <a class = "button button-confirm">
+                                        Повідомлення
+                                    </a>
+                                    <a class = "button button-delete-friend" id = "{% url 'delete_friend' friend.profile1.user.pk%}">
+                                        Видалити
+                                    </a>
+                                </div>
                             </div>
-                        
-                    
-                        <div class = "card-buttons">
-                            <a class = "button button-confirm">
-                                Повідомлення
-                            </a>
-                            <a class = "button button-delete-friend" id = "{% url 'delete_friend' friend.user.pk%}">
-                                Видалити
-                            </a>
-                        </div>
-                    </div>
+                        {% endif%}
                     {% endfor %}
                 </div>
             </div>
